Finished base game

--- a/index.html
+++ b/index.html
@@ -2,32 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-			canvas { display: block; }
-		</style>
+		<title>WebGL Game</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
         <!-- libraries -->
         <script src="https://threejs.org/build/three.js" defer></script>
-        <script src="js/perlin.js" defer></script>
 
         <!-- program -->
         <script src="js/utils.js" id="utils" defer></script>
         <script src="js/script.js" defer></script>
-
-        <!-- shaders -->
-        <script type="x-shader/x-vertex" id="vertexShader">
-            void main() {
-                vec4 modelViewPosition = modelViewMatrix * vec4(position, 1);
-                gl_Position = projectionMatrix * modelViewPosition;
-            }
-        </script>
-        <script type="x-shader/x-fragment" id="fragmentShader">
-            void main() {
-                gl_FragColor = vec4(r, g, b, vOpacity);
-            }
-        </script>
+        <h1 class="title">Epik WebGL #1 Game</h1>
+        <h3 class="score">Score: 0</h3>
+        <main>
+            <h1>You died!</h1>
+            <button onClick="restart()">Restart</button>
+        </main>
 	</body>
 </html>
